# finetune_memsafe

./: .coverage  .gitignore  DEMO_GUIDE.md  DEMO_README.md  FINAL_INTEGRATION_VALIDATION_REPORT.json  IMPORT_FIX_GUIDE.md  IMPORT_FIX_SUMMARY.md  QA_EVALUATION_README.md  QUICKSTART.md  QUICK_START.md  README.md  README_batch_processing_fix.md  README_enhanced.md  TASK_10_COMPREHENSIVE_TEST_REPORT.md  TASK_15_COMPLETION_SUMMARY.md  UV_GUIDE.md  all_qa_pairs.json  basic_validation_test_report.json  benchmark_report.md  benchmark_results.json  check_syntax.py  cli_standalone.py  demo_checkpoint_evaluation.py  demo_config.yaml  demo_integrated_progress.json  demo_progress_report.json  demo_pytorch_export.py  demo_requirements.txt  enhanced_config.py  enhanced_config_example.yaml  enhanced_config_simple.yaml  enhanced_error_recovery.py  enhanced_main.py  error_analysis_report.md  evaluation_progress.db  evaluation_report_基础概念类.json  evaluation_report_密码应用等级类.json  evaluation_report_技术要求类.json  example_config_demo.yaml  example_usage.py  (+65 more)
config/: data_processing_config_example.yaml
configs/: evaluation_config.yaml
data/processed_dataset/: data-00000-of-00001.arrow  state.json
data/raw/: sample_qa.md
docs/: API_REFERENCE.md  CLI_USAGE.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  EVALUATION_USER_GUIDE.md  INSTALLATION.md  OPENAI_COMPATIBLE_API_TESTING.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  enhanced_main_optimization.md  evaluation_batch_processing_fix.md
examples/: README.md  advanced_evaluation.py  api_demo.py  basic_usage.py  benchmark_performance.py  bigmodel_glm_demo.py  complete_demo.py  config_demo.py  data_pipeline_demo.py  enhanced_main_usage_example.py  evaluation_batch_processing_example.py  inference_testing_demo.py  logging_monitoring_demo.py  memory_error_handling_demo.py  model_loading_demo.py  openai_compatible_api_test.py  run_demo.py  simple_demo.py  test_demos.py
examples/config_examples/: advanced_config.yaml  basic_config.yaml
examples/configs/: high_performance_16gb.json  low_memory_8gb.json  openai_compatible_models.yaml  quick_test.json  standard_12gb.json
examples/datasets/: ai_ml_qa.md  general_knowledge_qa.md  programming_qa.md
industry_evaluation/: __init__.py
industry_evaluation/adapters/: __init__.py  model_adapter.py
industry_evaluation/analysis/: __init__.py  error_analyzer.py  improvement_generator.py
industry_evaluation/annotation/: __init__.py
industry_evaluation/api/: api_docs.py  rest_api.py
industry_evaluation/config/: config_manager.py
industry_evaluation/core/: __init__.py  batch_evaluator.py  evaluation_engine.py  interfaces.py  progress_tracker.py  result_aggregator.py  scheduler.py
industry_evaluation/evaluators/: __init__.py  base_evaluator.py  concept_relation_evaluator.py  dialogue_evaluator.py  knowledge_evaluator.py  long_text_evaluator.py  multi_step_reasoning_evaluator.py  reasoning_evaluator.py  terminology_evaluator.py  terminology_usage_evaluator.py
industry_evaluation/models/: data_models.py
industry_evaluation/reporting/: __init__.py  report_generator.py
industry_evaluation/utils/: data_processor.py
reports/: my_dataset_quality_report.html  my_dataset_quality_report.json
scripts/: batch_evaluation.py  config_templates.py  experiment_comparison.py  test_bigmodel_glm.sh
src/: __init__.py  checkpoint_detector.py  cli.py  config_presets.py  data_pipeline.py  environment_validator.py  error_recovery.py  export_config.py  export_exceptions.py  export_models.py  export_utils.py  format_exporter.py  inference_tester.py  logging_system.py  lora_adapter.py  memory_exceptions.py  memory_optimizer.py  model_export_controller.py  model_manager.py  model_merger.py  monitoring_logger.py  optimization_processor.py  progress_monitor.py  training_engine.py  training_engine_backup.py  validation_tester.py
src/evaluation/: __init__.py  cli.py  (+28 more)
tests/: FINAL_TEST_SUMMARY.md  README.md  TASK_9_COMPREHENSIVE_TEST_REPORT.md  TEST_REPORT.md  conftest.py  performance_benchmark.py  pyproject.toml  pytest.ini  requirements-test.txt  run_all_tests.py  run_final_integration_tests.py  test_annotation_system.py  test_base_evaluator.py  test_benchmark_manager.py  test_checkpoint_detector.py  test_cli.py  test_cli_basic.py  test_cli_standalone.py  test_concept_relation_evaluator.py  test_config.py  test_config_manager.py  test_controller_functionality.py  test_data_models.py  test_data_pipeline.py  test_data_processor.py  test_data_splitter.py  test_efficiency_analyzer.py  test_error_analyzer.py  test_evaluation_engine.py  test_experiment_tracker.py  test_final_validation_basic.py  test_format_exporter.py  test_improvement_generator.py  test_inference_tester.py  test_integration.py  test_integration_evaluation.py  test_integration_final_validation.py  test_integration_framework.py  test_integration_full_export.py  test_integration_full_system.py  (+29 more)
tests/evaluation/: __init__.py  run_tests.py  test_batch_data_validator.py  test_data_field_detector.py  test_data_preprocessor.py  test_field_mapper.py  test_integration.py  test_performance.py
tests/scripts/: run_tests.sh  setup_test_env.sh
tools/: test_openai_compatible_api.py
(+26 files in other folders)
